# btl_bloomfilter

./: .autotools  .gitignore  Bin.hpp  BitVector.hpp  BloomFilter.hpp  BloomFilterInfo.hpp  BloomFilterTest.hpp  BloomFilterUtil.h  BloomFilter_pythonwrapper.cpp  BloomMap.hpp  CountBloomFilter.hpp  CountingBloomFilter.hpp  INSTALL  KmerBloomFilter.hpp  MIBFConstructSupport.hpp  MIBFQuerySupport.hpp  MIBloomFilter.hpp  MIBloomFilterUtil.hpp  Makefile.am  README.md  RollingHashIterator.h  azure-pipelines.yml  configure.ac  ntHashIterator.hpp  nthash.hpp  stHashIterator.hpp
BloomFilter/: BloomFilter.hpp  BloomFilterInfo.hpp  Makefile.am  rolling.h
Examples/: RollingFilterLoad.cpp
Tests/: BloomFilterInfoTests.cpp  BloomFilterTests.cpp  Makefile.am  ParallelFilter.cpp  ReadProcessorTests.cpp  seqgen.cpp  seqgen.hpp
Tests/.deps/: BloomFilterInfoTests.Po  BloomFilterTests.Po  ReadProcessorTests.Po
Tests/AdHoc/: BloomFilterTests.cpp  Makefile.am  ParallelFilter.cpp
Tests/Unit/: BinTests.cpp  BitVectorTests.cpp  BloomFilterTests.cpp  BloomMapTests.cpp  CountingBloomFilterTests.cpp  MIBloomFilterTests.cpp  Makefile.am  catch.hpp
swig/: BloomFilter.i  README.md  test.pl  testBloom_rolling.cpp  testBloom_rolling.pl  writeBloom_rolling.cpp  writeBloom_rolling.pl
