SUBDIRS = \
	Tests/AdHoc \
	Tests/Unit

include_HEADERS = \
	BloomFilter.hpp \
	CountingBloomFilter.hpp \
	KmerBloomFilter.hpp \
	MIBFQuerySupport.hpp \
	MIBloomFilter.hpp \
	nthash.hpp \
	ntHashIterator.hpp \
	ssHashIterator.hpp \
	stHashIterator.hpp

dist_doc_DATA = \
	README.md

EXTRA_DIST = autogen.sh
