noinst_PROGRAMS = BloomFilterTests \
	BloomFilterInfoTests

BloomFilterTests_LDADD = $(top_builddir)/BloomFilter/libbloomfilter.a -lz
BloomFilterTests_SOURCES = BloomFilterTests.cpp

BloomFilterInfoTests_LDADD = $(top_builddir)/BloomFilter/libbloomfilter.a -lz
BloomFilterInfoTests_SOURCES = BloomFilterInfoTests.cpp